Fix: Issue fixed of overflow title for mobile screen

--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -8,10 +8,20 @@
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+  text-align: center;
   h6 {
     background: $text-gradient;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 1.5rem;
   }
 }
 
